--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ plugins {
     id 'org.fulib.fulibGradle' version '0.5.0'
     // https://plugins.gradle.org/plugin/io.github.gradle-nexus.publish-plugin
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+
+    // for service
+    id 'org.springframework.boot' version '2.5.6' apply false
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
 }
 
 // --------------- General Settings ---------------
