--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -1,51 +1,43 @@
 name: Java CI
 
 on:
-   - push
+  - push
 
 jobs:
-   build:
-      name: Java ${{ matrix.java }} on ${{ matrix.os }}
-      runs-on: ${{ matrix.os }}-latest
-      strategy:
-         matrix:
-            java:
-               - 17
-            os:
-               - ubuntu
-               - windows
-      steps:
-         -  name: Checkout
-            uses: actions/checkout@v2
-            with:
-               fetch-depth: 0
-         -  name: Set up JDK ${{ matrix.java }}
-            uses: actions/setup-java@v1
-            with:
-               java-version: ${{ matrix.java }}
-               java-package: jdk
-         -  name: Cache Gradle packages
-            uses: actions/cache@v2
-            with:
-               path: ~/.gradle/caches
-               key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-               restore-keys: ${{ runner.os }}-gradle
-         -  name: set gradlew permissions
-            run: chmod a+rwx ./gradlew
-         -  name: Check gradlew permissions
-            run: ls -l ./gradlew
-         -  name: Build with Gradle
-            run: ./gradlew --info test
-         -  name: Deploy to Maven Central
-            if: matrix.os == 'ubuntu' && matrix.java == 17 && startsWith(github.ref, 'refs/tags/v')
-            run: |
-               echo '${{ secrets.SIGNING_KEY }}' | base64 -d > /tmp/signing_key.gpg
-               ./gradlew \
-                 '-PsonatypeUsername=${{ secrets.NEXUS_USERNAME }}' \
-                 '-PsonatypePassword=${{ secrets.NEXUS_PASSWORD }}' \
-                 '-Psigning.keyId=${{ secrets.SIGNING_KEY_ID }}' \
-                 '-Psigning.password=${{ secrets.SIGNING_PASSWORD }}' \
-                 '-Psigning.secretKeyRingFile=/tmp/signing_key.gpg' \
-                 publishToSonatype closeAndReleaseSonatypeStagingRepository
-         -  name: Stop Gradle Daemon
-            run: ./gradlew --stop
+  build:
+    name: Java ${{ matrix.java }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        java:
+          - 17
+        os:
+          - ubuntu
+          - windows
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Set up JDK ${{ matrix.java }}
+        uses: actions/setup-java@v3
+        with:
+          java-version: ${{ matrix.java }}
+          java-package: jdk
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+      - name: Build with Gradle
+        run: ./gradlew --info test
+      - name: Deploy to Maven Central
+        if: matrix.os == 'ubuntu' && matrix.java == 17 && startsWith(github.ref, 'refs/tags/v')
+        run: |
+          echo '${{ secrets.SIGNING_KEY }}' | base64 -d > /tmp/signing_key.gpg
+          ./gradlew \
+            '-PsonatypeUsername=${{ secrets.NEXUS_USERNAME }}' \
+            '-PsonatypePassword=${{ secrets.NEXUS_PASSWORD }}' \
+            '-Psigning.keyId=${{ secrets.SIGNING_KEY_ID }}' \
+            '-Psigning.password=${{ secrets.SIGNING_PASSWORD }}' \
+            '-Psigning.secretKeyRingFile=/tmp/signing_key.gpg' \
+            publishToSonatype closeAndReleaseSonatypeStagingRepository
+      - name: Stop Gradle Daemon
+        run: ./gradlew --stop
