--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
+          distribution: adopt
           java-version: ${{ matrix.java }}
-          java-package: jdk
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       # --------------- Library ---------------
