improved gitignore for .vscode

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ local.properties
 /src/*/scenarios/**/*.svg
 /src/*/scenarios/**/*.txt
 /src/*/scenarios/**/*.yaml
-.vscode/settings.json
-.vscode/launch.json
+/.vscode/
