offer and enter rule work

--- a/src/gen/resources/heraklit-restaurant-extended.es.yaml
+++ b/src/gen/resources/heraklit-restaurant-extended.es.yaml
@@ -46,3 +46,8 @@
   place: clientsEntry
 - data: Client Bob
   place: clientsEntry
+
+- data: Client Alice
+  table: t1
+- data: Table t1
+  client: Alice
