--- a/src/gen/resources/heraklit-restaurant.es.yaml
+++ b/src/gen/resources/heraklit-restaurant.es.yaml
@@ -31,13 +31,17 @@
   place: freeTables
 
 - data: Place menu
-  items: [m_rice, m_meat, m_salad]
+  meals: [m1, m2]
+- data: Meal m1
+  items: [m_meat, m_rice]
+  place: menu
+- data: Meal m2
+  place: menu
+
 - data: OrderItem m_rice
-  place: menu
+  meals: [m1]
 - data: OrderItem m_meat
-  place: menu
 - data: OrderItem m_salad
-  place: menu
 
 - data: Place clientsEntry
   clients: [Alice, Bob]
