--- a/src/test/java/heraklitcafe/data/classModel.yaml
+++ b/src/test/java/heraklitcafe/data/classModel.yaml
@@ -1,5 +1,5 @@
 - c: 	org.fulib.classmodel.ClassModel
-  classes: 	branch 	place 	table 	selection 	orderItem 	client 	order
+  classes: 	branch 	place 	table 	selection 	orderItem 	client 	order 	itemRef
   defaultCollectionType: 	c1
   defaultPropertyStyle: 	Bean
   defaultRoleType: 	"java.util.ArrayList<%s>"
@@ -20,7 +20,7 @@
   modified: 	false
   name: 	Place
   propertyStyle: 	Bean
-  roles: 	place_tables 	place_clients 	place_selections 	place_orders
+  roles: 	place_tables 	place_clients 	place_selections 	place_orders 	place_itemRefs
 
 - table: 	org.fulib.classmodel.Clazz
   attributes: 	table_name
@@ -44,7 +44,7 @@
   modified: 	false
   name: 	OrderItem
   propertyStyle: 	Bean
-  roles: 	orderItem_selections
+  roles: 	orderItem_selections 	orderItem_itemRefs
 
 - client: 	org.fulib.classmodel.Clazz
   attributes: 	client_name
@@ -61,6 +61,14 @@
   name: 	Order
   propertyStyle: 	Bean
   roles: 	order_place 	order_table 	order_selection
+
+- itemRef: 	org.fulib.classmodel.Clazz
+  attributes: 	itemRef_name
+  model: 	c
+  modified: 	false
+  name: 	ItemRef
+  propertyStyle: 	Bean
+  roles: 	itemRef_place 	itemRef_orderItem
 
 - c1: 	org.fulib.classmodel.CollectionType
   implClass: 	class java.util.ArrayList
@@ -132,6 +140,18 @@
   modified: 	false
   name: 	orders
   other: 	order_place
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
+- place_itemRefs: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	place
+  collectionType: 	c1
+  id: 	Place_itemRefs
+  modified: 	false
+  name: 	itemRefs
+  other: 	itemRef_place
   propertyStyle: 	Bean
   roleType: 	"java.util.ArrayList<%s>"
 
@@ -238,6 +258,18 @@
   propertyStyle: 	Bean
   roleType: 	"java.util.ArrayList<%s>"
 
+- orderItem_itemRefs: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	42
+  clazz: 	orderItem
+  collectionType: 	c1
+  id: 	OrderItem_itemRefs
+  modified: 	false
+  name: 	itemRefs
+  other: 	itemRef_orderItem
+  propertyStyle: 	Bean
+  roleType: 	"java.util.ArrayList<%s>"
+
 - client_name: 	org.fulib.classmodel.Attribute
   clazz: 	client
   id: 	Client_name
@@ -306,5 +338,34 @@
   modified: 	false
   name: 	selection
   other: 	selection_orders
+  propertyStyle: 	Bean
+
+- itemRef_name: 	org.fulib.classmodel.Attribute
+  clazz: 	itemRef
+  id: 	ItemRef_name
+  modified: 	false
+  name: 	name
+  propertyStyle: 	Bean
+  type: 	String
+  typeSignature: 	String
+
+- itemRef_place: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	1
+  clazz: 	itemRef
+  id: 	ItemRef_place
+  modified: 	false
+  name: 	place
+  other: 	place_itemRefs
+  propertyStyle: 	Bean
+
+- itemRef_orderItem: 	org.fulib.classmodel.AssocRole
+  aggregation: 	false
+  cardinality: 	1
+  clazz: 	itemRef
+  id: 	ItemRef_orderItem
+  modified: 	false
+  name: 	orderItem
+  other: 	orderItem_itemRefs
   propertyStyle: 	Bean
 
